# fastapi-task-manager

./: .test.env  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
api_v1/tasks/: crud.py  dependencies.py  views.py
configs/: log_config.ini  promtail-config.yaml
core/: config.py  logger.py
core/models/: __init__.py  db_connect.py
scripts/: init_db.sh  init_test_db.sh
tests/: __init__.py  conftest.py
tests/api/: test_api_tasks.py
tests/crud/: test_crud_errors.py
